# sei-token-wrapper

./: .env.template  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
contracts/token-wrapper/: Cargo.toml
contracts/token-wrapper/schema/: sei-token-wrapper.json
contracts/token-wrapper/schema/raw/: execute.json  query.json  response_to_list_wrapped_tokens.json  response_to_token_info.json
contracts/token-wrapper/src/: error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
frontend/: package.json
frontend/src/components/: Layout.tsx  TokenUnwrapForm.tsx  TokenWrapForm.tsx  WrappedTokensList.tsx
frontend/src/config/: index.ts
frontend/src/hooks/: useWallet.ts
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/types/: config.ts  contract.ts
frontend/src/utils/: format.ts
scripts/: deploy.sh  setup.sh  test.sh  update-config.sh
