[workspace]
members = [
    "contracts/token-wrapper",
]
resolver = "2"

[workspace.dependencies]
cw2 = "1.0.1"
cw20 = "1.0.1"
cw-utils = "1.0.1"
cosmwasm-std = { version = "1.3.0", features = ["staking"] }
cosmwasm-schema = "1.3.0"
sei-cosmwasm = "0.4.15"
thiserror = "1.0.38"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true