[package]
name = "sei-token-wrapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cw2 = { version = "1.0.1" }
cw20 = { version = "1.0.1" }
cw-utils = { version = "1.0.1" }
cosmwasm-std = { version = "1.3.0", features = ["staking"] }
cosmwasm-schema = { version = "1.3.0" }
thiserror = { version = "1.0.38" }
sei-cosmwasm = { version = "0.4.15" }
hex = "0.4.3"
base32 = "0.5.0"
cw-storage-plus = "1.0.1"

[dev-dependencies]
cw-multi-test = "0.16.4"